# game2anki

./: Cargo.toml
.github/workflows/: build.yml
src/: anki.rs  hotkey_manager.rs  main.rs
src/audio/: encode.rs  mod.rs
src/config/: mod.rs  types.rs
src/screenshot/: capture.rs  encode.rs  mod.rs
src/utils/: border.rs  file.rs  keyboard.rs  mod.rs  window.rs
