[package]
name = 'game2anki'
version = '0.1.0'
edition = '2024'

[dependencies]
windows = { version = "0.61.1", features = [
    'Win32_System_LibraryLoader',
    'Win32_UI_Accessibility',
] }
tokio = { version = '1.45.1', features = [
    'rt-multi-thread',
    'macros',
    'signal',
] }
anyhow = '1.0.98'
config = '0.15.11'
image = '0.25.6'
reqwest = { version = '0.12.19', features = ['json'] }
serde = { version = '1.0.219', features = ['derive'] }
serde_json = '1.0.140'
tempfile = '3.20.0'
toml = '0.8.23'
wasapi = '0.18.0'
ravif = '0.11.12'
opus = '0.3.0'
rdev = { version = '0.5.3', features = ['serialize'] }
rgb = '0.8.50'
base64 = '0.22.1'
once_cell = "1.21.3"
windows-capture = { path = "../windows-capture" }
log = "0.4.27"
simple_logger = "5.0.0"
ogg = "0.9.2"
mp3lame-encoder = "0.2.1"
rustwav = "0.3.6"
flacenc = "0.4.0"
webp = "0.3.0"
strum = "0.27.1"
strum_macros = "0.27.1"
