[package]
name = 'game2anki'
version = '0.1.0'
edition = '2024'

[dependencies]
tokio = { version = '1.46.1', features = [
    'rt-multi-thread',
    'macros',
    'signal',
    'time',
] }
anyhow = '1.0.98'
config = '0.15.13'
image = '0.25.6'
reqwest = { version = '0.12.22', features = ['json'] }
serde = { version = '1.0.219', features = ['derive'] }
serde_json = '1.0.141'
toml = '0.9.2'

ravif = '0.12.0'
opus = '0.3.0'
rdev = { version = '0.5.3', features = ['serialize'] }
rgb = '0.8.52'

ogg = "0.9.2"
mp3lame-encoder = "0.2.1"
webp = "0.3.0"

once_cell = "1.21.3"
windows-capture = "1.5.0"
log = "0.4.27"
simple_logger = "5.0.0"

wasapi = '0.19.0'
dirs = "6.0.0"
winit = "0.30.11"
softbuffer = "0.4.6"
ffmpeg-sys-next = "7.1.3"
ez-ffmpeg = "0.5.3"

[profile.release]
lto = "fat"
codegen-units = 1
